--- a/core/resources/src/main/res/values-be/strings.xml
+++ b/core/resources/src/main/res/values-be/strings.xml
@@ -2096,4 +2096,15 @@
     <string name="hidden_for_share">Інструменты, схаваныя для абмену</string>
     <string name="color_library">Бібліятэка колераў</string>
     <string name="color_library_sub">Праглядзіце шырокую калекцыю колераў</string>
+    <string name="model_fatality_deblur">Павялічвае рэзкасць і выдаляе размытасць малюнкаў, захоўваючы пры гэтым натуральныя дэталі, што ідэальна падыходзіць для выпраўлення расфакусаваных фатаграфій.</string>
+    <string name="model_unresize_v3">Інтэлектуальна аднаўляе выявы, памер якіх раней быў зменены, аднаўляючы страчаныя дэталі і тэкстуры.</string>
+    <string name="model_liveaction_v1_span">Аптымізаваны для жывога кантэнту, памяншае артэфакты сціску і паляпшае дробныя дэталі ў кадрах фільмаў/тэлешоу.</string>
+    <string name="model_vhs2hd_realplksr">Пераўтварае відэаматэрыял VHS-якасці ў HD, выдаляючы шум стужкі і паляпшаючы разрозненне, захоўваючы старадаўняе адчуванне.</string>
+    <string name="model_text2hd_v1">Спецыялізуецца на выявах і скрыншотах з вялікай колькасцю тэксту, узмацняе выразнасць сімвалаў і паляпшае чытальнасць.</string>
+    <string name="model_frankendata_pretrainer">Пашыранае павышэнне маштабу, навучанае на розных наборах даных, выдатна падыходзіць для паляпшэння фатаграфій агульнага прызначэння.</string>
+    <string name="model_realwebphoto_v2">Аптымізавана для фатаграфій, сціснутых у Інтэрнэце, выдаляе артэфакты JPEG і аднаўляе натуральны выгляд.</string>
+    <string name="model_realwebphoto_v4">Палепшаная версія для вэб-фатаграфій з лепшым захаваннем тэкстуры і памяншэннем артэфактаў.</string>
+    <string name="model_dat_2x">2-кратнае павелічэнне маштабу з дапамогай тэхналогіі Dual Aggregation Transformer, захоўвае рэзкасць і натуральныя дэталі.</string>
+    <string name="model_dat_3x">3-кратнае павелічэнне з выкарыстаннем перадавой архітэктуры трансфарматара, ідэальнае для ўмераных патрэб пашырэння.</string>
+    <string name="model_dat_4x">4-кратнае высакаякаснае павышэнне маштабу з сучаснай сеткай трансфарматараў, захоўвае дробныя дэталі ў вялікіх маштабах.</string>
 </resources>
