--- a/core/resources/src/main/res/values-bn/strings.xml
+++ b/core/resources/src/main/res/values-bn/strings.xml
@@ -2094,4 +2094,15 @@
     <string name="hidden_for_share">শেয়ারের জন্য লুকানো টুল</string>
     <string name="color_library">রঙিন গ্রন্থাগার</string>
     <string name="color_library_sub">রঙের একটি বিশাল সংগ্রহ ব্রাউজ করুন</string>
+    <string name="model_fatality_deblur">প্রাকৃতিক বিশদগুলি বজায় রেখে ছবিগুলিকে তীক্ষ্ণ করে এবং অস্পষ্টতা সরিয়ে দেয়, ফোকাসের বাইরের ফটোগুলি ঠিক করার জন্য আদর্শ৷</string>
+    <string name="model_unresize_v3">বুদ্ধিমত্তার সাথে ইমেজগুলি পুনরুদ্ধার করে যা পূর্বে পুনরায় আকার দেওয়া হয়েছে, হারানো বিবরণ এবং টেক্সচার পুনরুদ্ধার করে।</string>
+    <string name="model_liveaction_v1_span">লাইভ-অ্যাকশন কন্টেন্টের জন্য অপ্টিমাইজ করা, কম্প্রেশন আর্টিফ্যাক্ট কমায় এবং মুভি/টিভি শো ফ্রেমে সূক্ষ্ম বিবরণ বাড়ায়।</string>
+    <string name="model_vhs2hd_realplksr">ভিএইচএস-গুণমানের ফুটেজকে HD তে রূপান্তর করে, টেপের শব্দ অপসারণ করে এবং ভিনটেজ অনুভূতি সংরক্ষণ করার সময় রেজোলিউশন বাড়ায়।</string>
+    <string name="model_text2hd_v1">টেক্সট-ভারী ছবি এবং স্ক্রিনশটগুলির জন্য বিশেষ, অক্ষরগুলিকে তীক্ষ্ণ করে এবং পঠনযোগ্যতা উন্নত করে।</string>
+    <string name="model_frankendata_pretrainer">বিভিন্ন ডেটাসেটে প্রশিক্ষিত উন্নত আপস্কেলিং, সাধারণ-উদ্দেশ্যের ফটো বর্ধনের জন্য চমৎকার।</string>
+    <string name="model_realwebphoto_v2">ওয়েব-সংকুচিত ফটোগুলির জন্য অপ্টিমাইজ করা, JPEG আর্টিফ্যাক্টগুলি সরিয়ে দেয় এবং প্রাকৃতিক চেহারা পুনরুদ্ধার করে।</string>
+    <string name="model_realwebphoto_v4">উন্নত টেক্সচার সংরক্ষণ এবং আর্টিফ্যাক্ট হ্রাস সহ ওয়েব ফটোগুলির জন্য উন্নত সংস্করণ।</string>
+    <string name="model_dat_2x">ডুয়াল অ্যাগ্রিগেশন ট্রান্সফরমার প্রযুক্তির সাথে 2x আপস্কেলিং, তীক্ষ্ণতা এবং প্রাকৃতিক বিবরণ বজায় রাখে।</string>
+    <string name="model_dat_3x">উন্নত ট্রান্সফরমার আর্কিটেকচার ব্যবহার করে 3x আপস্কেলিং, মাঝারি বৃদ্ধির প্রয়োজনের জন্য আদর্শ।</string>
+    <string name="model_dat_4x">অত্যাধুনিক ট্রান্সফরমার নেটওয়ার্কের সাথে 4x উচ্চ-মানের আপস্কেলিং, বড় স্কেলে সূক্ষ্ম বিবরণ সংরক্ষণ করে।</string>
 </resources>
