--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -2096,4 +2096,15 @@
     <string name="hidden_for_share">Инструменты, скрытые для общего доступа</string>
     <string name="color_library">Библиотека цветов</string>
     <string name="color_library_sub">Просмотрите обширную коллекцию цветов</string>
+    <string name="model_fatality_deblur">Увеличивает резкость и устраняет размытие изображений, сохраняя при этом естественные детали, что идеально подходит для исправления расфокусированных фотографий.</string>
+    <string name="model_unresize_v3">Интеллектуальное восстановление изображений, размер которых ранее был изменен, восстанавливая потерянные детали и текстуры.</string>
+    <string name="model_liveaction_v1_span">Оптимизирован для контента с живыми актерами, уменьшает артефакты сжатия и улучшает мелкие детали в кадрах фильмов/телешоу.</string>
+    <string name="model_vhs2hd_realplksr">Преобразует отснятый материал с качеством VHS в HD, удаляя шум ленты и повышая разрешение, сохраняя при этом ощущение винтажности.</string>
+    <string name="model_text2hd_v1">Специально предназначен для изображений и снимков экрана с большим количеством текста, повышает резкость символов и улучшает читаемость.</string>
+    <string name="model_frankendata_pretrainer">Расширенное масштабирование, обученное на различных наборах данных, отлично подходит для общего улучшения фотографий.</string>
+    <string name="model_realwebphoto_v2">Оптимизирован для фотографий, сжатых через Интернет, удаляет артефакты JPEG и восстанавливает естественный вид.</string>
+    <string name="model_realwebphoto_v4">Улучшенная версия для веб-фотографий с лучшим сохранением текстур и уменьшением артефактов.</string>
+    <string name="model_dat_2x">Двукратное масштабирование с помощью технологии Dual Aggregation Transformer обеспечивает четкость и естественные детали.</string>
+    <string name="model_dat_3x">3-кратное масштабирование с использованием усовершенствованной архитектуры трансформатора, идеально подходящее для умеренных потребностей в расширении.</string>
+    <string name="model_dat_4x">Четырехкратное высококачественное масштабирование с использованием современной трансформаторной сети сохраняет мелкие детали в больших масштабах.</string>
 </resources>
