--- a/core/resources/src/main/res/values-si/strings.xml
+++ b/core/resources/src/main/res/values-si/strings.xml
@@ -2095,4 +2095,15 @@
     <string name="hidden_for_share">බෙදාගැනීම සඳහා සැඟවුණු මෙවලම්</string>
     <string name="color_library">වර්ණ පුස්තකාලය</string>
     <string name="color_library_sub">විශාල වර්ණ එකතුවක් පිරික්සන්න</string>
+    <string name="model_fatality_deblur">ස්වාභාවික විස්තර පවත්වා ගනිමින් රූපවලින් මුවහත් කර නොපැහැදිලි ඉවත් කරයි, අවධානයෙන් බැහැර ඡායාරූප සවි කිරීම සඳහා වඩාත් සුදුසුය.</string>
+    <string name="model_unresize_v3">කලින් ප්‍රතිප්‍රමාණ කර ඇති පින්තූර බුද්ධිමත්ව ප්‍රතිසාධනය කරයි, නැතිවූ විස්තර සහ වයනය ප්‍රතිසාධනය කරයි.</string>
+    <string name="model_liveaction_v1_span">සජීවී-ක්‍රියාකාරී අන්තර්ගතයන් සඳහා ප්‍රශස්ත කර ඇත, සම්පීඩන කෞතුක වස්තු අඩු කරයි සහ චිත්‍රපට/රූපවාහිනී සංදර්ශන රාමු තුළ සියුම් විස්තර වැඩි දියුණු කරයි.</string>
+    <string name="model_vhs2hd_realplksr">VHS-ගුණාත්මක දර්ශන HD බවට පරිවර්තනය කරයි, ටේප් ශබ්දය ඉවත් කිරීම සහ වින්ටේජ් හැඟීම ආරක්ෂා කරමින් විභේදනය වැඩි දියුණු කරයි.</string>
+    <string name="model_text2hd_v1">පෙළ බර රූප සහ තිරපිටපත් සඳහා විශේෂිත, අක්ෂර මුවහත් කර කියවීමේ හැකියාව වැඩි දියුණු කරයි.</string>
+    <string name="model_frankendata_pretrainer">විවිධ දත්ත කට්ටල මත පුහුණු කරන ලද උසස් ඉහළ නැංවීම, සාමාන්‍ය කාර්ය ඡායාරූප වැඩිදියුණු කිරීම සඳහා විශිෂ්ටයි.</string>
+    <string name="model_realwebphoto_v2">වෙබ් සම්පීඩිත ඡායාරූප සඳහා ප්‍රශස්ත කර ඇත, JPEG කෞතුක වස්තු ඉවත් කර ස්වභාවික පෙනුම යථා තත්වයට පත් කරයි.</string>
+    <string name="model_realwebphoto_v4">වඩා හොඳ වයනය සංරක්ෂණය සහ කෞතුක වස්තු අඩු කිරීම සමඟ වෙබ් ඡායාරූප සඳහා වැඩිදියුණු කළ අනුවාදය.</string>
+    <string name="model_dat_2x">ද්විත්ව එකතු කිරීමේ ට්‍රාන්ස්ෆෝමර් තාක්‍ෂණය සමඟ 2x ඉහළ නැංවීම, තියුණු බව සහ ස්වාභාවික විස්තර පවත්වා ගනී.</string>
+    <string name="model_dat_3x">උසස් ට්‍රාන්ස්ෆෝමර් ගෘහ නිර්මාණ ශිල්පය භාවිතයෙන් 3x ඉහළ නැංවීම, මධ්‍යස්ථ විශාල කිරීමේ අවශ්‍යතා සඳහා වඩාත් සුදුසුය.</string>
+    <string name="model_dat_4x">අති නවීන ට්‍රාන්ස්ෆෝමර් ජාලය සමඟ 4x උසස් තත්ත්වයේ ඉහළ නැංවීම, විශාල පරිමාණයෙන් සියුම් තොරතුරු ආරක්ෂා කරයි.</string>
 </resources>
