--- a/core/resources/src/main/res/values-te/strings.xml
+++ b/core/resources/src/main/res/values-te/strings.xml
@@ -2094,4 +2094,15 @@
     <string name="hidden_for_share">భాగస్వామ్యం కోసం దాచబడిన సాధనాలు</string>
     <string name="color_library">రంగు లైబ్రరీ</string>
     <string name="color_library_sub">రంగుల విస్తారమైన సేకరణను బ్రౌజ్ చేయండి</string>
+    <string name="model_fatality_deblur">ఫోకస్ లేని ఫోటోలను ఫిక్సింగ్ చేయడానికి అనువైన సహజ వివరాలను నిర్వహించేటప్పుడు చిత్రాల నుండి పదును మరియు బ్లర్‌ను తొలగిస్తుంది.</string>
+    <string name="model_unresize_v3">మునుపు పరిమాణం మార్చబడిన చిత్రాలను తెలివిగా పునరుద్ధరిస్తుంది, కోల్పోయిన వివరాలు మరియు అల్లికలను తిరిగి పొందుతుంది.</string>
+    <string name="model_liveaction_v1_span">లైవ్-యాక్షన్ కంటెంట్ కోసం ఆప్టిమైజ్ చేయబడింది, కుదింపు కళాఖండాలను తగ్గిస్తుంది మరియు సినిమా/టీవీ షో ఫ్రేమ్‌లలో చక్కటి వివరాలను మెరుగుపరుస్తుంది.</string>
+    <string name="model_vhs2hd_realplksr">VHS-నాణ్యత ఫుటేజీని HDకి మారుస్తుంది, టేప్ శబ్దాన్ని తీసివేస్తుంది మరియు పాతకాలపు అనుభూతిని కాపాడుతూ రిజల్యూషన్‌ను మెరుగుపరుస్తుంది.</string>
+    <string name="model_text2hd_v1">టెక్స్ట్-హెవీ ఇమేజ్‌లు మరియు స్క్రీన్‌షాట్‌ల కోసం ప్రత్యేకించబడింది, అక్షరాలను పదునుపెడుతుంది మరియు రీడబిలిటీని మెరుగుపరుస్తుంది.</string>
+    <string name="model_frankendata_pretrainer">విభిన్న డేటాసెట్‌లపై శిక్షణ పొందిన అధునాతన అప్‌స్కేలింగ్, సాధారణ ప్రయోజన ఫోటో మెరుగుదల కోసం అద్భుతమైనది.</string>
+    <string name="model_realwebphoto_v2">వెబ్-కంప్రెస్ చేయబడిన ఫోటోల కోసం ఆప్టిమైజ్ చేయబడింది, JPEG కళాఖండాలను తీసివేస్తుంది మరియు సహజ రూపాన్ని పునరుద్ధరిస్తుంది.</string>
+    <string name="model_realwebphoto_v4">మెరుగైన ఆకృతి సంరక్షణ మరియు కళాఖండాల తగ్గింపుతో వెబ్ ఫోటోల కోసం మెరుగైన సంస్కరణ.</string>
+    <string name="model_dat_2x">డ్యూయల్ అగ్రిగేషన్ ట్రాన్స్‌ఫార్మర్ టెక్నాలజీతో 2x అప్‌స్కేలింగ్, పదును మరియు సహజ వివరాలను నిర్వహిస్తుంది.</string>
+    <string name="model_dat_3x">ఆధునిక ట్రాన్స్‌ఫార్మర్ ఆర్కిటెక్చర్ ఉపయోగించి 3x అప్‌స్కేలింగ్, మితమైన విస్తరణ అవసరాలకు అనువైనది.</string>
+    <string name="model_dat_4x">అత్యాధునిక ట్రాన్స్‌ఫార్మర్ నెట్‌వర్క్‌తో 4x అధిక-నాణ్యత అప్‌స్కేలింగ్, పెద్ద ప్రమాణాల వద్ద చక్కటి వివరాలను భద్రపరుస్తుంది.</string>
 </resources>
