--- a/core/resources/src/main/res/values-ug/strings.xml
+++ b/core/resources/src/main/res/values-ug/strings.xml
@@ -2094,4 +2094,15 @@
     <string name="hidden_for_share">ئورتاقلىشىش ئۈچۈن يوشۇرۇنغان قوراللار</string>
     <string name="color_library">رەڭلىك كۇتۇپخانا</string>
     <string name="color_library_sub">كەڭ رەڭلەرنى كۆرۈڭ</string>
+    <string name="model_fatality_deblur">تەبىئىي تەپسىلاتلارنى ساقلاش بىلەن بىر ۋاقىتتا سۈرەتتىكى تۇتۇقلىقنى ئۆتكۈرلەشتۈرۈۋېتىدۇ ۋە چىقىرىپ تاشلايدۇ ، فوكۇس سىرتىدىكى سۈرەتلەرنى ئوڭشاشقا ماس كېلىدۇ.</string>
+    <string name="model_unresize_v3">ئەقلىي ئىقتىدار ئىلگىرى چوڭايتىلغان رەسىملەرنى ئەسلىگە كەلتۈرۈپ ، يوقاپ كەتكەن تەپسىلاتلار ۋە توقۇلمىلارنى ئەسلىگە كەلتۈرىدۇ.</string>
+    <string name="model_liveaction_v1_span">نەق مەيدان ھەرىكەت مەزمۇنىغا ئەلالاشتۇرۇلغان ، پىرىسلاش بۇيۇملىرىنى ئازايتىدۇ ۋە كىنو / تېلېۋىزىيە پروگرامما رامكىلىرىدىكى ئىنچىكە ھالقىلارنى ئۆستۈرىدۇ.</string>
+    <string name="model_vhs2hd_realplksr">VHS سۈپەتلىك كۆرۈنۈشلەرنى HD غا ئايلاندۇرىدۇ ، لېنتا شاۋقۇنىنى چىقىرىپ تاشلايدۇ ۋە ئۈزۈم تۇيغۇسىنى ساقلايدۇ.</string>
+    <string name="model_text2hd_v1">تېكىست ئېغىر رەسىم ۋە ئېكران كۆرۈنۈشلىرى ئۈچۈن مەخسۇس ، ھەرپلەرنى ئۆتكۈرلەشتۈرۈپ ، ئوقۇشچانلىقىنى ئۆستۈرىدۇ.</string>
+    <string name="model_frankendata_pretrainer">كۆپ خىل سانلىق مەلۇمات سانلىق مەلۇماتلىرى بويىچە تەربىيىلەنگەن ئىلغار دەرىجىگە كۆتۈرۈش ، ئادەتتىكى مەقسەتلىك رەسىمنى ئاشۇرۇش ئۈچۈن ناھايىتى ياخشى.</string>
+    <string name="model_realwebphoto_v2">تور بېسىلغان رەسىملەر ئۈچۈن ئەلالاشتۇرۇلغان ، JPEG ئاسارە-ئەتىقىلەرنى چىقىرىپ تاشلاپ ، تەبىئىي كۆرۈنۈشنى ئەسلىگە كەلتۈرىدۇ.</string>
+    <string name="model_realwebphoto_v4">تېخىمۇ ياخشى توقۇلمىلارنى قوغداش ۋە ئاسارە-ئەتىقىلەرنى ئازايتىش بىلەن تور رەسىملىرىنىڭ نەشىرى ياخشىلاندى.</string>
+    <string name="model_dat_2x">قوش يىغىلىش تىرانسفورموتور تېخنىكىسى بىلەن 2x يۇقىرى كۆتۈرۈلۈپ ، ئۆتكۈرلۈك ۋە تەبىئىي تەپسىلاتلارنى ساقلايدۇ.</string>
+    <string name="model_dat_3x">ئىلغار تىرانسفورموتور قۇرۇلمىسىنى ئىشلىتىپ 3x يۇقىرى كۆتۈرۈش ، ئوتتۇراھال چوڭايتىش ئېھتىياجىغا ماس كېلىدۇ.</string>
+    <string name="model_dat_4x">زامانىۋى تىرانسفورموتور تورى بىلەن 4x يۇقىرى سۈپەتلىك يۇقىرى كۆتۈرۈلۈش ، تېخىمۇ چوڭ كۆلەمدە ئىنچىكە تەپسىلاتلارنى ساقلايدۇ.</string>
 </resources>
