--- a/core/resources/src/main/res/values-cs/strings.xml
+++ b/core/resources/src/main/res/values-cs/strings.xml
@@ -2096,4 +2096,15 @@
     <string name="hidden_for_share">Nástroje skryté pro sdílení</string>
     <string name="color_library">Knihovna barev</string>
     <string name="color_library_sub">Prohlédněte si rozsáhlou sbírku barev</string>
+    <string name="model_fatality_deblur">Zaostří a odstraní rozmazání snímků při zachování přirozených detailů, což je ideální pro opravu rozostřených fotografií.</string>
+    <string name="model_unresize_v3">Inteligentně obnovuje obrázky, jejichž velikost byla dříve změněna, a obnovuje ztracené detaily a textury.</string>
+    <string name="model_liveaction_v1_span">Optimalizováno pro živě akční obsah, snižuje kompresní artefakty a vylepšuje jemné detaily ve snímcích filmu/TV pořadu.</string>
+    <string name="model_vhs2hd_realplksr">Převádí záznam v kvalitě VHS do HD, odstraňuje šum na pásce a zvyšuje rozlišení při zachování vintage stylu.</string>
+    <string name="model_text2hd_v1">Specializuje se na obrázky a snímky obrazovky s velkým množstvím textu, zaostřuje znaky a zlepšuje čitelnost.</string>
+    <string name="model_frankendata_pretrainer">Pokročilé upscaling trénované na různých souborech dat, vynikající pro všeobecné vylepšení fotografií.</string>
+    <string name="model_realwebphoto_v2">Optimalizováno pro webově komprimované fotografie, odstraňuje JPEG artefakty a obnovuje přirozený vzhled.</string>
+    <string name="model_realwebphoto_v4">Vylepšená verze pro webové fotografie s lepším zachováním textury a redukcí artefaktů.</string>
+    <string name="model_dat_2x">2x upscaling s technologií Dual Aggregation Transformer, zachovává ostrost a přirozené detaily.</string>
+    <string name="model_dat_3x">3x upscaling pomocí pokročilé architektury transformátoru, ideální pro potřeby mírného zvětšení.</string>
+    <string name="model_dat_4x">4x vysoce kvalitní upscaling s nejmodernější sítí transformátorů, zachovává jemné detaily ve větším měřítku.</string>
 </resources>
