--- a/core/resources/src/main/res/values-da/strings.xml
+++ b/core/resources/src/main/res/values-da/strings.xml
@@ -2094,4 +2094,15 @@
     <string name="hidden_for_share">Værktøjer skjult til deling</string>
     <string name="color_library">Farvebibliotek</string>
     <string name="color_library_sub">Gennemse en stor samling af farver</string>
+    <string name="model_fatality_deblur">Gør skarpere og fjerner sløring fra billeder, samtidig med at de naturlige detaljer bevares, ideel til at rette ufokuserede billeder.</string>
+    <string name="model_unresize_v3">Intelligent gendanner billeder, der tidligere er blevet ændret, og genskaber mistede detaljer og teksturer.</string>
+    <string name="model_liveaction_v1_span">Optimeret til live-action-indhold, reducerer kompressionsartefakter og forbedrer fine detaljer i film-/tv-showrammer.</string>
+    <string name="model_vhs2hd_realplksr">Konverterer optagelser i VHS-kvalitet til HD, fjerner båndstøj og forbedrer opløsningen, samtidig med at vintage-følelsen bevares.</string>
+    <string name="model_text2hd_v1">Specialiseret til teksttunge billeder og skærmbilleder, skærper tegn og forbedrer læsbarheden.</string>
+    <string name="model_frankendata_pretrainer">Avanceret opskalering trænet på forskellige datasæt, fremragende til generelle fotoforbedring.</string>
+    <string name="model_realwebphoto_v2">Optimeret til webkomprimerede billeder, fjerner JPEG-artefakter og genopretter det naturlige udseende.</string>
+    <string name="model_realwebphoto_v4">Forbedret version til webfotos med bedre teksturbevarelse og reduktion af artefakter.</string>
+    <string name="model_dat_2x">2x opskalering med Dual Aggregation Transformer-teknologi, bevarer skarphed og naturlige detaljer.</string>
+    <string name="model_dat_3x">3x opskalering ved hjælp af avanceret transformerarkitektur, ideel til moderate forstørrelsesbehov.</string>
+    <string name="model_dat_4x">4x højkvalitets opskalering med state-of-the-art transformer netværk, bevarer fine detaljer i større skalaer.</string>
 </resources>
