--- a/core/resources/src/main/res/values-hi/strings.xml
+++ b/core/resources/src/main/res/values-hi/strings.xml
@@ -2094,4 +2094,15 @@
     <string name="hidden_for_share">साझा करने के लिए छिपे हुए उपकरण</string>
     <string name="color_library">रंग पुस्तकालय</string>
     <string name="color_library_sub">रंगों का विशाल संग्रह ब्राउज़ करें</string>
+    <string name="model_fatality_deblur">प्राकृतिक विवरण बनाए रखते हुए छवियों से धुंधलापन को तेज और हटा देता है, जो फोकस से बाहर की तस्वीरों को ठीक करने के लिए आदर्श है।</string>
+    <string name="model_unresize_v3">खोए हुए विवरण और बनावट को पुनर्प्राप्त करते हुए, पहले से आकार बदल दी गई छवियों को बुद्धिमानी से पुनर्स्थापित करता है।</string>
+    <string name="model_liveaction_v1_span">लाइव-एक्शन सामग्री के लिए अनुकूलित, संपीड़न कलाकृतियों को कम करता है और मूवी/टीवी शो फ्रेम में बारीक विवरण बढ़ाता है।</string>
+    <string name="model_vhs2hd_realplksr">वीएचएस-गुणवत्ता वाले फ़ुटेज को एचडी में परिवर्तित करता है, टेप के शोर को हटाता है और पुराने अनुभव को संरक्षित करते हुए रिज़ॉल्यूशन को बढ़ाता है।</string>
+    <string name="model_text2hd_v1">टेक्स्ट-भारी छवियों और स्क्रीनशॉट के लिए विशेषीकृत, अक्षरों को तेज़ करता है और पठनीयता में सुधार करता है।</string>
+    <string name="model_frankendata_pretrainer">विविध डेटासेट पर प्रशिक्षित उन्नत अपस्केलिंग, सामान्य प्रयोजन फोटो एन्हांसमेंट के लिए उत्कृष्ट।</string>
+    <string name="model_realwebphoto_v2">वेब-संपीड़ित फ़ोटो के लिए अनुकूलित, JPEG कलाकृतियों को हटाता है और प्राकृतिक स्वरूप को पुनर्स्थापित करता है।</string>
+    <string name="model_realwebphoto_v4">बेहतर बनावट संरक्षण और कलाकृतियों में कमी के साथ वेब फ़ोटो के लिए उन्नत संस्करण।</string>
+    <string name="model_dat_2x">डुअल एग्रीगेशन ट्रांसफार्मर तकनीक के साथ 2x अपस्केलिंग, तीक्ष्णता और प्राकृतिक विवरण बनाए रखता है।</string>
+    <string name="model_dat_3x">उन्नत ट्रांसफॉर्मर आर्किटेक्चर का उपयोग करके 3x अपस्केलिंग, मध्यम विस्तार आवश्यकताओं के लिए आदर्श।</string>
+    <string name="model_dat_4x">अत्याधुनिक ट्रांसफार्मर नेटवर्क के साथ 4x उच्च-गुणवत्ता वाला अपस्केलिंग, बड़े पैमाने पर बारीक विवरणों को संरक्षित करता है।</string>
 </resources>
