--- a/core/resources/src/main/res/values-th/strings.xml
+++ b/core/resources/src/main/res/values-th/strings.xml
@@ -2093,4 +2093,15 @@
     <string name="hidden_for_share">เครื่องมือที่ซ่อนอยู่เพื่อการแบ่งปัน</string>
     <string name="color_library">ห้องสมุดสี</string>
     <string name="color_library_sub">เรียกดูคอลเลกชันสีที่หลากหลาย</string>
+    <string name="model_fatality_deblur">ปรับความคมชัดและลบความเบลอออกจากภาพโดยยังคงรายละเอียดที่เป็นธรรมชาติ เหมาะสำหรับการแก้ไขภาพที่อยู่นอกโฟกัส</string>
+    <string name="model_unresize_v3">กู้คืนรูปภาพที่ได้รับการปรับขนาดก่อนหน้านี้อย่างชาญฉลาด โดยกู้คืนรายละเอียดและพื้นผิวที่สูญหาย</string>
+    <string name="model_liveaction_v1_span">ปรับให้เหมาะสมสำหรับเนื้อหาไลฟ์แอ็กชั่น ลดปัญหาการบีบอัด และเพิ่มรายละเอียดเล็กๆ น้อยๆ ในเฟรมภาพยนตร์/รายการทีวี</string>
+    <string name="model_vhs2hd_realplksr">แปลงฟุตเทจคุณภาพ VHS เป็น HD ช่วยขจัดสัญญาณรบกวนของเทปและเพิ่มความละเอียดในขณะที่ยังคงรักษาความรู้สึกแบบวินเทจ</string>
+    <string name="model_text2hd_v1">ออกแบบมาสำหรับรูปภาพและภาพหน้าจอที่มีข้อความจำนวนมาก ปรับความคมชัดของตัวอักษร และปรับปรุงความสามารถในการอ่าน</string>
+    <string name="model_frankendata_pretrainer">การลดขนาดขั้นสูงที่ได้รับการฝึกอบรมบนชุดข้อมูลที่หลากหลาย เหมาะอย่างยิ่งสำหรับการปรับปรุงภาพถ่ายทั่วไป</string>
+    <string name="model_realwebphoto_v2">ปรับให้เหมาะสมสำหรับภาพถ่ายที่บีบอัดทางเว็บ ลบสิ่งประดิษฐ์ JPEG และคืนลักษณะที่เป็นธรรมชาติ</string>
+    <string name="model_realwebphoto_v4">เวอร์ชันที่ได้รับการปรับปรุงสำหรับภาพถ่ายบนเว็บพร้อมการรักษาพื้นผิวและการลดสิ่งแปลกปลอมที่ดีขึ้น</string>
+    <string name="model_dat_2x">เพิ่มสเกล 2 เท่าด้วยเทคโนโลยี Dual Aggregation Transformer รักษาความคมชัดและรายละเอียดที่เป็นธรรมชาติ</string>
+    <string name="model_dat_3x">การขยายขนาด 3 เท่าโดยใช้สถาปัตยกรรมหม้อแปลงขั้นสูง เหมาะสำหรับความต้องการในการขยายระดับปานกลาง</string>
+    <string name="model_dat_4x">การเพิ่มสเกลคุณภาพสูง 4 เท่าด้วยเครือข่ายหม้อแปลงที่ล้ำสมัย ช่วยรักษารายละเอียดเล็กๆ น้อยๆ ในสเกลที่ใหญ่ขึ้น</string>
 </resources>
